@@ -1,3 +1,0 @@
-<?php
-
-$sql[] = "ALTER TABLE `{$dbprefix}personnel` CHANGE `recup_samedi` `comp_time` float NULL;";
