@@ -1751,6 +1751,12 @@ if (version_compare($config['Version'], $v) === -1) {
     $sql[] = "UPDATE `{$dbprefix}config` SET `valeur`='$v' WHERE `nom`='Version';";
 }
 
+$v="19.11.00.008";
+if (version_compare($config['Version'], $v) === -1) {
+    $sql[] = "ALTER TABLE `{$dbprefix}personnel` CHANGE `recup_samedi` `comp_time` float NULL;";
+    $sql[] = "UPDATE `{$dbprefix}config` SET `valeur`='$v' WHERE `nom`='Version';";
+}
+
 //	Execution des requetes et affichage
 foreach ($sql as $elem) {
     $db=new db();
