@@ -22,6 +22,7 @@ Allow modification and validation of admins leave request
 Show information messages on the add absence form
 Fix error "Cannot declare App\Model\Agent" when importing planning model
 Fix the creation of status and service CSS classes in the planning.js file
+Rename recup_samedi to comp_time
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
